Fixed layout issues in the banner's text content

--- a/css/style.css
+++ b/css/style.css
@@ -362,14 +362,8 @@ header {
 #banner-content {
   position: absolute;
   z-index: 100;
-  top: 0;
+  top: 10%;
   width: 100%;
-  /*
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;  */
 }
 #banner-content * {
   display: block;
@@ -444,6 +438,12 @@ header {
 }
 #banner-content #banner-summary p a:hover, #banner-content #banner-summary p a:focus, #banner-content #banner-summary p a:active {
   text-decoration: underline;
+}
+#banner-content #banner-summary address {
+  margin: 0 auto 0 0;
+}
+#banner-content #banner-summary address a {
+  margin: 0 auto 0 2px;
 }
 #banner-content #banner-button a {
   /*!
