--- a/scss/partials/common/_banner.scss
+++ b/scss/partials/common/_banner.scss
@@ -20,14 +20,8 @@
 #banner-content {
   position           : absolute;
   z-index            : 100;
-  top                : 0;
+  top                : 10%;
   width              : 100%;
-  /*
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;  */
 
   * {
     @include set-content-width;
@@ -82,6 +76,14 @@
         &:hover, &:focus, &:active {
           text-decoration: underline;
         }
+      }
+    }
+
+    address {
+      margin: 0 auto 0 0;
+
+      a {
+        margin: 0 auto 0 2px;
       }
     }
   }
